# jdg-ksiegowy

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRON.md  DEPLOYMENT.md  Dockerfile  HEARTBEAT.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SOUL.md  TODO.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/skills/: README.md
.claude/skills/calendar-sync/: SKILL.md
.claude/skills/contracts/: SKILL.md
.claude/skills/doctor/: SKILL.md
.claude/skills/expense/: SKILL.md
.claude/skills/invoice/: SKILL.md
.claude/skills/invoice-send/: SKILL.md
.claude/skills/jdg-status/: SKILL.md
.claude/skills/jpk/: SKILL.md
.claude/skills/jpk-ewp/: SKILL.md
.claude/skills/jpk-submit/: SKILL.md
.claude/skills/ksef/: SKILL.md
.claude/skills/pit28/: SKILL.md
.claude/skills/tax-calculator/: SKILL.md
.claude/skills/zus-dra/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: jpk_v7m_v14090.xsd  sig-2008_v2-0.xsd
scripts/: backup_offsite.py
skills/calendar-sync/scripts/: sync.py
skills/contracts/scripts/: import_bank_csv.py  mark_paid.py  run_contracts.py
skills/doctor/scripts/: check.py
skills/expense/scripts/: add.py  list.py  scan.py
skills/invoice/: SKILL.md
skills/invoice-send/scripts/: send.py
skills/invoice/scripts/: generate.py
skills/jdg-status/scripts/: status.py
skills/jpk/: SKILL.md
skills/jpk-ewp/scripts/: generate_ewp.py
skills/jpk-submit/scripts/: submit.py
skills/jpk/scripts/: generate_jpk.py
skills/ksef/: SKILL.md
skills/ksef/scripts/: inbox.py  submit.py
skills/pit28/scripts/: pit28_report.py
skills/tax-calculator/: SKILL.md
skills/tax-calculator/scripts/: calculate.py
skills/zus-dra/scripts/: generate.py
src/jdg_ksiegowy/: __init__.py  config.py  doctor.py  validators.py
src/jdg_ksiegowy/calendar/: __init__.py  auth_setup.py  gcal.py  sync.py
src/jdg_ksiegowy/contracts/: __init__.py  runner.py
src/jdg_ksiegowy/expenses/: __init__.py  ksef_mapper.py  models.py  ocr.py
src/jdg_ksiegowy/invoice/: calculator.py  generator_docx.py  generator_xml.py  mailer.py  models.py  pdf.py
src/jdg_ksiegowy/ksef/: client.py
src/jdg_ksiegowy/mf_gateway/: __init__.py  auth.py  client.py  crypto.py  metadata.py  public_key.py
src/jdg_ksiegowy/registry/: db.py  payments.py
src/jdg_ksiegowy/status/: __init__.py  dashboard.py
src/jdg_ksiegowy/tax/: ewp.py  income.py  jpk.py  pit28.py  validation.py  zus.py
src/jdg_ksiegowy/zus/: __init__.py  dra.py
tests/: conftest.py  test_calendar_sync.py  test_contracts_runner.py  test_dashboard.py  test_doctor.py  test_ewp.py  test_expense_ocr.py  test_foreign_invoices.py  test_income_date.py  test_invoice_correction.py  test_invoice_mailer.py  test_invoice_models.py  test_invoice_pdf.py  test_jpk.py  test_jpk_reverse_charge.py  test_jpk_submit_skill.py  test_jpk_with_expenses.py  test_jpk_xsd_validation.py  test_ksef_inbox_mapper.py  test_ksef_inbox_skill.py  test_ksef_skill.py  test_mf_auth.py  test_mf_crypto.py  test_mf_gateway_sandbox.py  test_payments.py  test_pit28.py  test_validators.py  test_zus_dra.py  test_zus_social.py
