[project]
name = "jdg-ksiegowy"
version = "0.2.0"
description = "AI Asystent Ksiegowy JDG — OpenClaw AgentSkills dla faktur, KSeF, JPK, podatkow"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "ksef2>=0.17.0",
    "python-docx>=1.2.0",
    "lxml>=6.1.1",
    "xmlschema>=4.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "cryptography>=49.0.0",
    "anthropic>=0.109.1",
    "pillow>=12.2.0",
    "pypdf>=6.13.2",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.54.0",
    "google-auth-oauthlib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdg_ksiegowy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "xsd: testy walidujace wygenerowany XML wzgledem oficjalnych XSD MF (wymagaja internetu przy pierwszym uruchomieniu)",
]
